<resources>
    <string name="app_name">Pictures Gallery</string>

    <string name="title_images">Pictures</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_app_info">App info</string>

    <string name="empty_images_text">Oops, we have no data for show you</string>
    <string name="empty_favourites_text">You have no favourites yet</string>
    <string name="no_network_error_text">No internet connection</string>
    <string name="load_network_error_text">Something went wrong: can\'t load data from server, try again later</string>
    <string name="load_db_error_text">Something went wrong: can\'t load data your favourites images</string>
    <string name="wallpaper_error_str">Something went wrong: can\'t set wallpaper, try again later</string>
    <string name="wallpaper_success_str">The wallpaper has been successfully changed</string>
    <string name="wallpaper_loading_str">Start change wallpaper…</string>
    <string name="home_screen_str">Home screen</string>
    <string name="lock_screen_str">Lock screen</string>
    <string name="both_screens_str">Both</string>
    <string name="set_wallpaper_str">Set wallpaper</string>
    <string name="downloading_error_str">Something went wrong: can\'t download image</string>
    <string name="downloading_success_str">Pictures has been saved</string>
    <string name="app_info_str">Welcome to this app! Here you can view hundreds of pictures, choose your own wallpaper, share it with friends and just enjoy the beautiful arts.</string>
    <string name="app_info_created_str">© App created by Kochenkov.</string>
    <string name="app_info_powered_str">All pictures provided by Pyxabay.</string>
    <string name="app_info_main_img_info_str">Author of the current image is @sv_olya.</string>
</resources>