<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/wallpaper_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/set_wallpaper_str"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_wallpaper_home_screen_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/margin_24"
        android:drawablePadding="4dp"
        android:text="@string/home_screen_str"
        android:textSize="@dimen/main_text_size"
        app:drawableLeftCompat="@drawable/ic_baseline_add_to_home_screen_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_title_tv" />

    <TextView
        android:id="@+id/set_wallpaper_lock_screen_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/margin_24"
        android:drawablePadding="4dp"
        android:text="@string/lock_screen_str"
        android:textSize="@dimen/main_text_size"
        app:drawableLeftCompat="@drawable/ic_baseline_screen_lock_portrait_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_wallpaper_home_screen_tv" />

    <TextView
        android:id="@+id/set_wallpaper_both_screens_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_24"
        android:drawablePadding="4dp"
        android:text="@string/both_screens_str"
        android:textSize="@dimen/main_text_size"
        app:drawableLeftCompat="@drawable/ic_baseline_wallpaper_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_wallpaper_lock_screen_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>